ASC Prod BAckup/ASC Prod/force-app/main/default/objects/tbl_Repack__mdt/tbl_Repack__mdt.object-meta.xml
<CustomObject>
    <label>tbl_Repack</label>
    <pluralLabel>tbl_Repack</pluralLabel>
</CustomObject>