ASC Prod BAckup/ASC Prod/force-app/main/default/objects/tbl_Repack__mdt/fields/BO_No_Pkg_Days__c.field-meta.xml
<CustomField>
    <fullName>BO_No_Pkg_Days__c</fullName>
    <label>BO_No_Pkg_Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>