ASC Prod BAckup/ASC Prod/force-app/main/default/objects/tbl_Repack__mdt/fields/Repack_Desc__c.field-meta.xml
<CustomField>
    <fullName>Repack_Desc__c</fullName>
    <label>Repack_Desc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>