ASC Prod BAckup/ASC Prod/force-app/main/default/objects/tbl_Repack__mdt/fields/Repack_Id__c.field-meta.xml
<CustomField>
    <fullName>Repack_Id__c</fullName>
    <label>Repack_Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>