ASC Prod BAckup/ASC Prod/force-app/main/default/objects/tbl_Repack__mdt/fields/Repack_No_Days__c.field-meta.xml
<CustomField>
    <fullName>Repack_No_Days__c</fullName>
    <label>Repack_No_Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>