ASC Prod BAckup/ASC Prod/force-app/main/default/objects/tbl_Repack__mdt/fields/Repack_Note__c.field-meta.xml
<CustomField>
    <fullName>Repack_Note__c</fullName>
    <label>Repack_Note</label>
    <type>TextArea</type>
</CustomField>