ASC Prod BAckup/ASC Prod/force-app/main/default/objects/tbl_Repack__mdt/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Repack_Id__c</columns>
    <columns>Repack_Desc__c</columns>
    <columns>Repack_No_Days__c</columns>
    <columns>BO_No_Pkg_Days__c</columns>
    <columns>Repack_Note__c</columns>
    <filterScope>Everything</filterScope>
    <label>all</label>
    <language>en_US</language>
</ListView>